lastYearJer added to monthlyProgress form

--- a/views/center/monthlyProgress/monthlyProgressForm.ejs
+++ b/views/center/monthlyProgress/monthlyProgressForm.ejs
@@ -98,12 +98,19 @@
                   </div>
 
                   <div class="form-row mt-3">
-
+                    <div class="col">
+                      <label for="lastYearJer" class="col-md-3 control-label">পূর্ব বছরের জের</label>
+                      <input type="text" class="form-control" name="lastYearJer" placeholder="পূর্ব বছরের জের">
+                    </div>
                     <div class="col">
                       <label for="deadWriteup" class="col control-label">মৃত/বিনষ্ট রাইটআপ (চলতি মাস)</label>
                       <input type="number" class="form-control" name="deadWriteup" placeholder="মৃত/বিনষ্ট রাইটআপ">
                     </div>
+                    
+                    
+                  </div>
 
+                  <div class="form-row mt-3">
                     <div class="col">
                       <label for="comment" class="col-md-3 control-label">মন্তব্য</label>
                       <input type="text" class="form-control" name="comment" placeholder="মন্তব্য">
