--- a/views/center/expense/expenseTable.ejs
+++ b/views/center/expense/expenseTable.ejs
@@ -20,7 +20,7 @@
             <th>মোট খরচ</th>
             <th>অবশিষ্ট</th>
             <th>মন্তব্য অতিরিক্ত খরচ বেতন</th>
-            <th>পরিবর্তন/মুছুন</th>
+            <th>পরিবর্তন</th>
     </tr>
     </thead>
     <tbody>
@@ -45,7 +45,7 @@
                 <td><%= row.baki %></td>
                 <td><%= row.comment %></td>
                 <td><a class="btn btn-primary btn-xs" href="/center/expenseEdit/<%= row.id %>"><i class="fa fa-edit"></i></a>
-                    <a class="btn btn-danger btn-xs" href="/center/expenseDelete/<%= row.id %>"><i class="fa fa-trash"></i></a>
+                    <!-- <a class="btn btn-danger btn-xs" href="/center/expenseDelete/<%= row.id %>"><i class="fa fa-trash"></i></a> -->
                 </td>
                 
                
