--- a/views/center/monthlyProgress/monthlyProgressFormEdit.ejs
+++ b/views/center/monthlyProgress/monthlyProgressFormEdit.ejs
@@ -174,7 +174,7 @@
                       <label for="productionCurrent" class="col control-label">উৎপাদন (চলতি মাস)</label>
                       <div class="row">
                         <div class="col-12">
-                          <input type="number" class="form-control" name="productionCurrent" placeholder="<%= currentProductionSum %>">
+                          <input type="number" class="form-control" name="productionCurrent" value="<%= currentProductionSum %>">
                         </div>
                       </div>
                     </div>
@@ -183,7 +183,7 @@
                       <div class="row">
 
                         <div class="col-12">
-                          <input type="number" class="form-control" name="daePrapti" placeholder="<%= daePraptiSum %>">
+                          <input type="number" class="form-control" name="daePrapti" value="<%= daePraptiSum %>">
                         </div>
                       </div>
                     </div>
@@ -194,7 +194,7 @@
                           <!--                                                    <input readonly class="form-control" type="text" value=" + ">-->
                         </div>
                         <div class="col-12">
-                          <input type="number" class="form-control" name="bitotonCurrentMonth" placeholder="<%= currentBitoronSum %>">
+                          <input type="number" class="form-control" name="bitotonCurrentMonth" value="<%= currentBitoronSum %>">
                         </div>
                       </div>
 
@@ -204,7 +204,7 @@
                       <div class="row">
 
                         <div class="col-9">
-                          <input type="number" class="form-control" name="daeProdan" placeholder="<%= currentDaeProdanSum %>">
+                          <input type="number" class="form-control" name="daeProdan" value="<%= currentDaeProdanSum %>">
                         </div>
                       </div>
                     </div>
@@ -217,7 +217,7 @@
                       <div class="row">
 
                         <div class="col-12">
-                          <input type="number" class="form-control" name="deadWriteup" placeholder="<%= currentMritoSum %>">
+                          <input type="number" class="form-control" name="deadWriteup" value="<%= currentMritoSum %>">
                         </div>
                       </div>
                     </div>
