fixed monthly progress delete action

--- a/views/center/centerInfo/centerEdit.ejs
+++ b/views/center/centerInfo/centerEdit.ejs
@@ -24,7 +24,7 @@
                                     </div>
                                     
                                     <div class="form-group">
-                                        <label for="kormokorta" class="col-md-3 control-label">কেন্দ্র প্রধানের নাম</label>
+                                        <label for="kormokorta" class="col-md-3 control-label">সেন্টার প্রধানের নাম</label>
                                         <div class="col-md-9">
                                             <input type="text" class="form-control" name="kormokorta" value="<%= records.kormokorta %>">
                                         </div>
