--- a/views/allCenterInfo.ejs
+++ b/views/allCenterInfo.ejs
@@ -104,7 +104,7 @@
                     <tr>
                         <th style="color: #070707; border: 1px solid black;padding: 10px;" >ক্রমিক নং</th>
                         <th style="color: #070707 ; border: 1px solid black">সেন্টারের নাম</th>
-                        <th style="color: #070707 ; border: 1px solid black">কর্মকর্তার নাম</th>
+                        <th style="color: #070707 ; border: 1px solid black">সেন্টার প্রধানের নাম</th>
                         <th style="color: #070707 ; border: 1px solid black">পদবী</th>
                         <th style="color: #070707 ; border: 1px solid black">মোবাইল নং</th>
                         <th style="color: #070707 ; border: 1px solid black">ই-মেইল</th>
@@ -128,7 +128,7 @@
                         <thead>
                         <tr>
                             <th>সেন্টারের নাম</th>
-                            <th>কর্মকর্তার নাম</th>
+                            <th>সেন্টার প্রধানের নাম</th>
                             <th>পদবী</th>
                             <th>মোবাইল নং</th>
                             <th>ই-মেইল</th>
