--- a/views/center/expense/pdf.ejs
+++ b/views/center/expense/pdf.ejs
@@ -30,6 +30,14 @@
       border-collapse: collapse;
     }
 
+    .header {
+      display: flex;
+      width: 100%;
+    }
+
+    .header>* {
+      width: 33%;
+    }
     .center {
       text-align: center;
     }
@@ -44,6 +52,19 @@
 
   <div style="margin-top: 5px; padding-top: 5px; padding-bottom: 5px; background-color: #ffffffa6;" class="center">
     <div>
+      <div class="header">
+        <div>
+          <img src="/images/dae.jpg" width="100" alt="dae">
+        </div>
+        <div class="flex-container">
+          <h5>গণপ্রজাতন্ত্রী বাংলাদেশ সরকার</h5>
+          <h5>কৃষি সম্প্রসারণ অধিদপ্তর</h5>
+          <h5>হর্টিকালচার উইং</h5>
+        </div>
+        <div>
+          <img src="/images/bd.png" width="100" alt="bd">
+        </div>
+      </div>
       <h1>খরচের (বিএস্টেটমেন্ট) হিসাব বিবরণী</h1>
       <p><b>সেন্টারের নাম : </b> <%= centerName.center %></p>
       <%if (records.length >0){ %>
