--- a/views/center/rajossho/rajosshoForm.ejs
+++ b/views/center/rajossho/rajosshoForm.ejs
@@ -38,11 +38,11 @@
                                         <div class="col-md-9">
                                             <select name="upokhat" id="upokhat" class="form-control">
                                                 <option value="">উপ-খাতের নাম</option>
-                                                <% rajosshoCodes.forEach(function(row){ %>
-                                                    <% if (row.upokhat != null) {%>
-                                                        <option value=<%= row.id %>><%= row.upokhat %></option>
+                                                <% for(let i=0; i < upokhats.length; i++){ %>
+                                                    <% if (upokhats[i] != null) {%>
+                                                        <option value=<%= ids[i] %>><%= upokhats[i] %></option>
                                                     <% } %>
-                                                <% }) %>
+                                                <% } %>
                                             </select>
                                         </div>
                                     </div>
@@ -144,7 +144,25 @@
                                         <div class="col-md-9">
                                             <label for="year">বছর :</label>
                                         <select id="year" name="year" required>
-                                            <option value="2021" selected>২০২১-২২</option>
+                                            <% const currentMonth = moment().format("MMM-YYYY").toLowerCase();
+                                            if (moment().format("M") < 7){
+                                                startYear = moment(currentMonth).subtract(1, "year").format('yyyy')
+                                                endYear = moment(currentMonth).format('yyyy')
+                                            }else{
+                                                startYear =moment(currentMonth).format('yyyy')
+                                                endYear = moment(currentMonth).add(1, "year").format('yyyy')
+                                            }
+                                            const sEndYear = endYear.toString().slice(2,4)
+                                            var valueStr = `${startYear}-${sEndYear}`
+                                            
+                                            const finalEnlishToBanglaNumber={'0':'০','1':'১','2':'২','3':'৩','4':'৪','5':'৫','6':'৬','7':'৭','8':'৮','9':'৯'};
+                                            for (const x in finalEnlishToBanglaNumber) {
+                                                valueStr = valueStr.replace(new RegExp(x, 'g'), finalEnlishToBanglaNumber[x]);
+                                            }    
+
+                                    %>
+                                    <option value="<%= startYear.toString() %>" selected><%= valueStr %></option>
+                                            <option value="2021">২০২১-২২</option>
                                             <option value="2022">২০২২-২৩</option>
                                             <option value="2023">২০২৩-২৪</option>
                                             <option value="2024">২০২৪-২৫</option>
