--- a/views/center/monthlyProgress/monthlyProgress.ejs
+++ b/views/center/monthlyProgress/monthlyProgress.ejs
@@ -48,38 +48,28 @@
 
 <%- include('../../includes/footer')-%>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script type="text/javascript" src="https://unpkg.com/xlsx@0.15.1/dist/xlsx.full.min.js"></script>
 
 <script type="text/javascript">
-  function exportToExcel(tableID, filename = ''){
-      console.log("clicked");
-      var downloadurl;
-      var dataFileType = 'application/vnd.ms-excel';
-      var tableSelect = document.getElementById(tableID);
-      var tableHTMLData = tableSelect.outerHTML.replace(/ /g, '%20');
-      
-      // Specify file name
-      filename = filename?filename+'.xls':'export_excel_data.xls';
-      
-      // Create download link element
-      downloadurl = document.createElement("a");
-      
-      document.body.appendChild(downloadurl);
-      
-      if(navigator.msSaveOrOpenBlob){
-          var blob = new Blob(['\ufeff', tableHTMLData], {
-              type: dataFileType
-          });
-          navigator.msSaveOrOpenBlob( blob, filename);
-      }else{
-          // Create a link to the file
-          downloadurl.href = 'data:' + dataFileType + ', ' + tableHTMLData;
-      
-          // Setting the file name
-          downloadurl.download = filename;
-          
-          //triggering the function
-          downloadurl.click();
-      }
+  async function exportToExcel(tableID, filename = '') {
+    try {
+      console.log(tableID)
+      var elt = document.getElementById(tableID);
+      var wb = await XLSX.utils.table_to_book(elt, {
+        sheet: "sheet1"
+      });
+      // return dl ?
+      //   XLSX.write(wb, {
+      //     bookType: 'xlsx',
+      //     bookSST: true,
+      //     type: 'base64'
+      //   })
+      // : 
+      await XLSX.writeFile(wb, filename + '.xlsx', );
+    } catch (error) {
+      console.log(error)
+    }
+
   }
    
   </script>
