--- a/views/pd/monthlyProgress/monthlyProgressTable.ejs
+++ b/views/pd/monthlyProgress/monthlyProgressTable.ejs
@@ -176,17 +176,17 @@
                 <td><%= new Number(productionTargetSum).toLocaleString("bn-BD") %></td><!--  উৎপাদন (লক্ষ্যমাত্রা) -->
                 <td><%= new Number(currentProductionSum).toLocaleString("bn-BD") %></td><!--   উৎপাদন (চলতি মাস) -->
                 <td> <%= new Number(previousMonthProduction).toLocaleString("bn-BD") %> </td><!--  উৎপাদন (পূর্বমাস পর্যন্ত) -->
-                <td> <%= new Number(totalProductionSum).toLocaleString("bn-BD") %> </td><!--  মোট উৎপাদন (চলতি+পূর্ব মাস) -->
+                <td> <%= new Number(currentProductionSum+previousMonthProduction).toLocaleString("bn-BD") %> </td><!--  মোট উৎপাদন (চলতি+পূর্ব মাস) -->
                 <td> <%= new Number(daePraptiSum).toLocaleString("bn-BD") %> </td><!-- ডিএই চালানে প্রাপ্তি -->
                 <td> <%= new Number(prevYearJer).toLocaleString("bn-BD") %> </td><!--  পূর্ব বছরের জের -->
-                <td> <%= new Number(totalProductionSum + daePraptiSum + prevYearJer).toLocaleString("bn-BD") %> </td><!-- সর্বমোট (মোট+ডিএই চালানে প্রাপ্তি+পূর্ব বছরের জের -->
+                <td> <%= new Number(currentProductionSum + previousMonthProduction + daePraptiSum + prevYearJer).toLocaleString("bn-BD") %> </td><!-- সর্বমোট (মোট+ডিএই চালানে প্রাপ্তি+পূর্ব বছরের জের -->
                 <td><%= new Number(currentBitoronSum).toLocaleString("bn-BD") %></td><!-- বিতরণ (চলতি মাস) -->
                 <td><%= new Number(previousMonthBitoronSum).toLocaleString("bn-BD") %></td><!--  বিতরণ (পূর্বমাস পর্যন্ত) -->
                 <td><%= new Number(totalBitoronSum).toLocaleString("bn-BD") %></td><!-- বিতরণ মোট (চলতি+পূর্ব মাস) -->
                 <td><%= new Number(currentDaeProdanSum).toLocaleString("bn-BD") %></td><!-- ডিএই চালানে প্রদান -->
                 <td><%= new Number(currentMritoSum).toLocaleString("bn-BD") %></td><!-- মৃত/বিনষ্ট রাইটআপ -->
                 <td><%= new Number(totalBitoronSum + currentDaeProdanSum + currentMritoSum).toLocaleString("bn-BD") %></td><!--  সর্বমোট (মোট+ডিএই চালানে প্রদান+মৃত/বিনষ্ট রাইটআপ) -->
-                <td><%= new Number((totalProductionSum + daePraptiSum + prevYearJer) - (totalBitoronSum + currentDaeProdanSum + currentMritoSum)).toLocaleString("bn-BD") %></td> <!--  নীট মজুদ -->
+                <td><%= new Number((currentProductionSum + previousMonthProduction + daePraptiSum + prevYearJer) - (totalBitoronSum + currentDaeProdanSum + currentMritoSum)).toLocaleString("bn-BD") %></td> <!--  নীট মজুদ -->
                 <td><%= montobboSum %></td>
                 <td>
                     <a class="btn btn-primary btn-xs" href="/pd/monthlyProgressEdit/<%= row.id %>/<%= selectedDate %>"><i class="fa fa-edit"></i></a>
