--- a/views/pd/expense/pdf.ejs
+++ b/views/pd/expense/pdf.ejs
@@ -4,17 +4,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>খরচের (বিএস্টেটমেন্ট) হিসাব বিবরণী</title>
+  <title>খরচের (বি-স্টেটমেন্ট) হিসাব বিবরণী</title>
 
-  <s tyle>
-    .f lex-container {
+  <style>
+    .flex-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     }
 
-    .f lex-container h5 {
+    .flex-container h5 {
     padding: 0;
     margin: 0;
     }
@@ -25,34 +25,34 @@
     border: 1px solid black;
     }
 
-    .t able {
+    .table {
     width: 100%;
     border-collapse: collapse;
     }
 
-    .c enter {
+    .center {
     text-align: center;
     }
 
-    .i nline-block-child {
+    .inline-block-child {
     display: inline-block;
     }
 
-    .h eader {
+    .header {
     display: flex;
     width: 100%;
     }
 
-    .h eader>* {
+    .header>* {
     width: 33%;
     }
 
-    .r ow {
+    .row {
     display: flex;
     width: 100%;
     }
 
-    .r ow>* {
+    .row>* {
     width: 50%;
     }
     </style>
