--- a/views/center/employee/chak1/employeeChak1Form.ejs
+++ b/views/center/employee/chak1/employeeChak1Form.ejs
@@ -57,7 +57,7 @@
                                     <div class="form-group">
                                         <div class="col-md-9">
                                             <label for="nijDistrict" class="col-md-3 control-label">নিজ জেলা</label>
-                                            <select name="district">
+                                            <select name="nijDistrict" id="nijDistrict">
                                         <option value="বাগেরহাট">বাগেরহাট</option>
                                         <option value="বান্দরবান">বান্দরবান</option>
                                         <option value="বরগুনা">বরগুনা</option>
@@ -129,13 +129,13 @@
                                   
 
                                     <div class="form-group">
-                                        <label for="name" class="col-md-3 control-label">পদবী</label>
+                                        <label for="podobi" class="col-md-3 control-label">পদবী</label>
                                         <div class="col-md-9">
-                                            <select name="name" id="name" class="form-control">
+                                            <select name="podobi" id="podobi" class="form-control">
                                                 <option value="">পদের নাম</option>
                                                 <% podobiLists.forEach(function(row){ %>
                                                     <% if (row.podobi != null) {%>
-                                                        <option value=<%= row.podobi %>><%= row.podobi %></option>
+                                                        <option value="<%= row.podobi %>"><%= row.podobi %></option>
                                                     <% } %>
                                                 <% }) %>
                                             </select>
@@ -164,9 +164,16 @@
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="pastWorkstation" class="col-md-3 control-label">পূর্ববর্তী কর্মস্থল ও যোগদানের তারিখ</label>
+                                        <label for="pastDate" class="col-md-3 control-label">পূর্ববর্তী কর্মস্থলে যোগদানের তারিখ</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="pastWorkstation" placeholder="পূর্ববর্তী কর্মস্থল ও যোগদানের তারিখ">
+                                        <input type="date" class="form-control" name="pastDate" placeholder="পূর্ববর্তী কর্মস্থলে যোগদানের তারিখ">
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label for="pastWorkstation" class="col-md-3 control-label">পূর্ববর্তী কর্মস্থল</label>
+                                        <div class="col-md-9">
+                                            <input type="text" class="form-control" name="pastWorkstation" placeholder="পূর্ববর্তী কর্মস্থল">
                                         </div>
                                     </div>
 
