--- a/views/center/employee/chak1/employeeChak1Table.ejs
+++ b/views/center/employee/chak1/employeeChak1Table.ejs
@@ -10,7 +10,8 @@
         <th>জন্ম তারিখ</th>
         <th>চাকুরীতে প্রথম যোগদানের তারিখ</th>
         <th>বর্তমান কর্মস্থলে যোগদানের তারিখ</th>
-        <th>পূর্ববর্তী কর্মস্থল ও যোগদানের তারিখ</th>
+        <th>পূর্ববর্তী কর্মস্থলে যোগদানের তারিখ</th>
+        <th>পূর্ববর্তী কর্মস্থল</th>
         <th>মন্তব্য</th>
         <th>পরিবর্তন/মুছুন</th>
     </tr>
@@ -26,6 +27,7 @@
                 <td><%= row.birthDate %></td>
                 <td><%= row.firstdate %></td>
                 <td><%= row.presentDate %></td>
+                <td><%= row.pastDate %></td>
                 <td><%= row.pastWorkstation %></td>
                 <td><%= row.comment %></td>
                 <td><a class="btn btn-primary btn-xs" href="/center/chak1Edit/<%= row.id %>"><i class="fa fa-edit"></i></a>
@@ -48,7 +50,8 @@
             <th>জন্ম তারিখ</th>
             <th>চাকুরীতে প্রথম যোগদানের তারিখ</th>
             <th>বর্তমান কর্মস্থলে যোগদানের তারিখ</th>
-            <th>পূর্ববর্তী কর্মস্থল ও যোগদানের তারিখ</th>
+            <th>পূর্ববর্তী কর্মস্থলে যোগদানের তারিখ</th>
+            <th>পূর্ববর্তী কর্মস্থল</th>
             <th>মন্তব্য</th>
         </tr>
         </thead>
