rajossho table and expense table have been sorted

--- a/views/center/rajossho/rajosshoTable.ejs
+++ b/views/center/rajossho/rajosshoTable.ejs
@@ -1,5 +1,5 @@
 <%if (records.length >0){ %>
-    <table class="table table-bordered table-striped" id="tblexportData" cellspacing="0" cellpadding="0">
+    <table class="table table-bordered table-striped" id="tblCustomers" cellspacing="0" cellpadding="0">
     <thead>
     <tr>
         <th>অর্থনৈতিক কোড নং</th>
@@ -97,7 +97,8 @@
                
             </tr>
         <% }) %>
-        <td colspan="2">মোটঃ </td>
+        <td>→</td>
+                <td>মোটঃ </td>
                 <td><%= subjuly1 %></td>
                 <td><%= subaugust1 %></td>
                 <td><%= subsept1 %></td>
