--- a/views/pd/cropCategoryTable/cropCategoryTableEdit.ejs
+++ b/views/pd/cropCategoryTable/cropCategoryTableEdit.ejs
@@ -27,13 +27,13 @@
                                     <div class="form-group">
                                         <label for="name" class="col-md-3 control-label">পুরাতন নাম</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="name" placeholder="পুরাতন নাম" value="<%= records.name %>" readonly>
+                                            <input type="text" class="form-control" name="oldName" placeholder="পুরাতন নাম" value="<%= records.name %>" readonly>
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label for="name" class="col-md-3 control-label">নতুন নাম</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="name" placeholder="নতুন নাম">
+                                            <input type="text" class="form-control" name="newName" placeholder="নতুন নাম">
                                         </div>
                                     </div>
                                     
