--- a/views/pd/monthlyProgress/monthlyProgress.ejs
+++ b/views/pd/monthlyProgress/monthlyProgress.ejs
@@ -31,6 +31,7 @@
                                             <select id="center" name="center" class="form-control" required>
                                                 <option value="">Choose center</option>
                                                 <option value="all">সকল সেন্টার </option>
+                                                <option value="summary">Summary </option>
                                                 <% if (centers.length >0){ %>
                                                     <% centers.forEach(function (center) { %>
                                                         <option value="<%= center.id %>"><%= center.center %></option>
