--- a/views/center/employee/chak2/employeeChak2.ejs
+++ b/views/center/employee/chak2/employeeChak2.ejs
@@ -17,7 +17,7 @@
                         
                         <div class="row mb-2">
                             <div class="col-md-12">
-                                <a href="/center/chak2Form" class="btn btn-success btn-group-sm ">হর্টিকালচার সেন্টারের কর্মকতা/কর্মচারীদের মঞ্জুরীকৃত পদ ও শুণ্য পদের সংখ্যা ফর্ম</a>
+                                <a href="/center/chak2Form" class="btn btn-success btn-group-sm ">হর্টিকালচার সেন্টারের কর্মকর্তা/কর্মচারীদের মঞ্জুরীকৃত পদ ও শুণ্য পদের সংখ্যা ফর্ম</a>
                             </div>
 
                         </div>
