--- a/views/center/employee/chak2/pdf.ejs
+++ b/views/center/employee/chak2/pdf.ejs
@@ -34,6 +34,15 @@
       text-align: center;
     }
 
+    .header {
+      display: flex;
+      width: 100%;
+    }
+
+    .header>* {
+      width: 33%;
+    }
+
     .inline-block-child {
       display: inline-block;
     }
@@ -44,7 +53,20 @@
 
   <div style="margin-top: 5px; padding-top: 5px; padding-bottom: 5px; background-color: #ffffffa6;" class="center">
     <div>
-      <h1>হর্টিকালচার সেন্টারের কর্মকতা/কর্মচারীদের মঞ্জুরীকৃত পদ ও শুণ্য পদের সংখ্যা</h1>
+      <div class="header">
+        <div>
+          <img src="/images/bd.png" width="100" alt="bd">
+        </div>
+        <div class="flex-container">
+          <h5>গণপ্রজাতন্ত্রী বাংলাদেশ সরকার</h5>
+          <h5>কৃষি সম্প্রসারণ অধিদপ্তর</h5>
+          <h5>হর্টিকালচার উইং</h5>
+        </div>
+        <div>
+          <img src="/images/dae.jpg" width="100" alt="dae">
+        </div>
+      </div>
+      <h4>হর্টিকালচার সেন্টারের কর্মকতা/কর্মচারীদের মঞ্জুরীকৃত পদ ও শুণ্য পদের সংখ্যা</h4>
       <p><b>সেন্টারের নাম :</b><%= centerName.center %></p>
       <%if (records.length >0){ %>
       <table class="table table-bordered table-striped" id="tblCustomers" cellspacing="0" cellpadding="0">
