--- a/views/center/worker/workerInfo/pdf.ejs
+++ b/views/center/worker/workerInfo/pdf.ejs
@@ -89,6 +89,7 @@
               <th>মোবাইল নং</th>
               <th>যোগদানের তারিখ</th>
               <th>এনআইডি নং</th>
+              <th>জন্ম তারিখ</th>
               <th>ব্যাংক একাউন্ট নং</th>
             </tr>
           </thead>
@@ -103,6 +104,7 @@
               <td><%= row.mobile %></td>
               <td><%= row.date %></td>
               <td><%= row.nid %></td>
+              <td><%= row.birthDate %></td>
               <td><%= row.bank %></td>
 
             </tr>
@@ -121,6 +123,7 @@
               <th>মোবাইল নং</th>
               <th>যোগদানের তারিখ</th>
               <th>এনআইডি নং</th>
+              <th>জন্ম তারিখ</th>
               <th>ব্যাংক একাউন্ট নং</th>
             </tr>
           </thead>
