--- a/views/pd/employee/chak1/employeeChak1Form.ejs
+++ b/views/pd/employee/chak1/employeeChak1Form.ejs
@@ -80,9 +80,16 @@
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="pastWorkstation" class="col-md-3 control-label">পূর্ববর্তী কর্মস্থল ও যোগদানের তারিখ</label>
+                                        <label for="pastDate" class="col-md-3 control-label">পূর্ববর্তী কর্মস্থলে যোগদানের তারিখ</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="pastWorkstation" placeholder="পূর্ববর্তী কর্মস্থল ও যোগদানের তারিখ">
+                                        <input type="date" class="form-control" name="pastDate" placeholder="পূর্ববর্তী কর্মস্থলে যোগদানের তারিখ">
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label for="pastWorkstation" class="col-md-3 control-label">পূর্ববর্তী কর্মস্থল</label>
+                                        <div class="col-md-9">
+                                            <input type="text" class="form-control" name="pastWorkstation" placeholder="পূর্ববর্তী কর্মস্থল">
                                         </div>
                                     </div>
 
