employee pdf fixed center and pd end

--- a/views/pd/employee/chak1/pdf.ejs
+++ b/views/pd/employee/chak1/pdf.ejs
@@ -96,7 +96,8 @@
             <th>জন্ম তারিখ</th>
             <th>চাকুরীতে প্রথম যোগদানের তারিখ</th>
             <th>বর্তমান কর্মস্থলে যোগদানের তারিখ</th>
-            <th>পূর্ববর্তী কর্মস্থল ও যোগদানের তারিখ</th>
+            <th>পূর্ববর্তী কর্মস্থলে যোগদানের তারিখ</th>
+            <th>পূর্ববর্তী কর্মস্থল</th>
             <th>মন্তব্য</th>
           </tr>
         </thead>
@@ -111,6 +112,7 @@
             <td><%= row.birthDate %></td>
             <td><%= row.firstdate %></td>
             <td><%= row.presentDate %></td>
+            <td><%= row.pastDate %></td>
             <td><%= row.pastWorkstation %></td>
             <td><%= row.comment %></td>
           </tr>
@@ -129,7 +131,8 @@
             <th>জন্ম তারিখ</th>
             <th>চাকুরীতে প্রথম যোগদানের তারিখ</th>
             <th>বর্তমান কর্মস্থলে যোগদানের তারিখ</th>
-            <th>পূর্ববর্তী কর্মস্থল ও যোগদানের তারিখ</th>
+            <th>পূর্ববর্তী কর্মস্থলে যোগদানের তারিখ</th>
+            <th>পূর্ববর্তী কর্মস্থল</th>
             <th>মন্তব্য</th>
           </tr>
         </thead>
