--- a/views/center/employee/chak1/pdf.ejs
+++ b/views/center/employee/chak1/pdf.ejs
@@ -58,7 +58,8 @@
             <th>জন্ম তারিখ</th>
             <th>চাকুরীতে প্রথম যোগদানের তারিখ</th>
             <th>বর্তমান কর্মস্থলে যোগদানের তারিখ</th>
-            <th>পূর্ববর্তী কর্মস্থল ও যোগদানের তারিখ</th>
+            <th>পূর্ববর্তী কর্মস্থলে যোগদানের তারিখ</th>
+            <th>পূর্ববর্তী কর্মস্থল</th>
             <th>মন্তব্য</th>
           </tr>
         </thead>
@@ -73,6 +74,7 @@
             <td><%= row.birthDate %></td>
             <td><%= row.firstdate %></td>
             <td><%= row.presentDate %></td>
+            <td><%= row.pastDate %></td>
             <td><%= row.pastWorkstation %></td>
             <td><%= row.comment %></td>
           </tr>
@@ -91,7 +93,8 @@
             <th>জন্ম তারিখ</th>
             <th>চাকুরীতে প্রথম যোগদানের তারিখ</th>
             <th>বর্তমান কর্মস্থলে যোগদানের তারিখ</th>
-            <th>পূর্ববর্তী কর্মস্থল ও যোগদানের তারিখ</th>
+            <th>পূর্ববর্তী কর্মস্থলে যোগদানের তারিখ</th>
+            <th>পূর্ববর্তী কর্মস্থল</th>
             <th>মন্তব্য</th>
           </tr>
         </thead>
