loanEdit added and loanForm updated

--- a/views/center/loan/loanTable.ejs
+++ b/views/center/loan/loanTable.ejs
@@ -10,7 +10,7 @@
         <th>চলতি অর্থবছরে আদায়কৃত টাকার পরিমাণ</th>
         <th>চলতি অর্থবছরে অবশিষ্ট টাকার পরিমাণ</th>
         <th>মন্তব্য</th>
-        
+        <th>পরিবর্তন</th>
     </tr>
     </thead>
     <tbody>
@@ -24,7 +24,9 @@
                 <td><%= row.aday2 %></td>
                 <td><%= row.left2 %></td>
                 <td><%= row.comment %></td>
-               
+                <td>
+                    <a class="btn btn-primary btn-xs" href="/center/loanEdit/<%= row.id %>"><i class="fa fa-edit"></i></a>
+                </td>
             </tr>
         <% }) %>
     </tbody>
@@ -41,6 +43,7 @@
         <th>চলতি অর্থবছরে আদায়কৃত টাকার পরিমাণ</th>
         <th>চলতি অর্থবছরে অবশিষ্ট টাকার পরিমাণ</th>
         <th>মন্তব্য</th>
+        <th>পরিবর্তন</th>
         </tr>
         </thead>
         <tbody>
