--- a/views/center/loan/loanEdit.ejs
+++ b/views/center/loan/loanEdit.ejs
@@ -9,7 +9,7 @@
                     <div id="signupbox" style="margin-top:50px" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
                         <div class="panel panel-info">
                             <div class="panel-heading">
-                                <div class="panel-title"><h2>ঋণ বিতরণ ও আদায় এর অগ্রগতির প্রতিবেদন ফর্ম</h2></div>
+                                <div class="panel-title"><h2>ঋণ বিতরণ ও আদায় এর অগ্রগতির সম্পাদনা ফর্ম</h2></div>
                                 <p><%
                                 if(success !=''){ %>
                                 <%= success %>
@@ -17,7 +17,7 @@
                                 </p>
                                 </div>  
                             <div class="panel-body" >
-                                <form action="/center/loanForms" id="FieldTrialForm" class="form-horizontal" method="post"  role="form">
+                                <form action="/center/loanEditPost/<%=records.id%>" id="FieldTrialForm" class="form-horizontal" method="post"  role="form">
                                     <div id="signupalert" style="display:none" class="alert alert-danger">
                                         <p>Error:</p>
                                         <span></span>
@@ -34,86 +34,62 @@
                                     <div class="form-group">
                                         <label for="boraddo" class="col-md-3 control-label">ঋণ বাবদ বরাদ্দ অর্থ</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="boraddo" placeholder="ঋণ বাবদ বরাদ্দ অর্থ">
+                                            <input type="text" class="form-control" name="boraddo" value="<%= records.boraddo %>">
                                         </div>
                                     </div>
                                     
                                     <div class="form-group">
                                         <label for="bitoron1" class="col-md-3 control-label">বিগত অর্থবছরে বিতরণকৃত অর্থের পরিমাণ</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="bitoron1" placeholder="বিগত অর্থবছরে বিতরণকৃত অর্থের পরিমাণ">
+                                            <input type="text" class="form-control" name="bitoron1" value="<%= records.bitoron1 %>">
                                         </div>
                                     </div>
 
                                     <div class="form-group">
                                         <label for="aday1" class="col-md-3 control-label">বিগত অর্থবছরে আদায়কৃত টাকার পরিমাণ</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="aday1" placeholder="বিগত অর্থবছরে আদায়কৃত টাকার পরিমাণ">
+                                            <input type="text" class="form-control" name="aday1" value="<%= records.aday1 %>">
                                         </div>
                                     </div>
 
                                     <div class="form-group">
                                         <label for="left1" class="col-md-3 control-label">বিগত অর্থবছরে অবশিষ্ট টাকার পরিমাণ</label>
                                         <div class="col-md-9">
-                                        <input type="text" class="form-control" name="left1" placeholder="বিগত অর্থবছরে অবশিষ্ট টাকার পরিমাণ">
+                                        <input type="text" class="form-control" name="left1" value="<%= records.left1 %>">
                                         </div>
                                     </div>
 
                                     <div class="form-group">
                                         <label for="bitoron2" class="col-md-3 control-label">চলতি অর্থবছরে বিতরণকৃত অর্থের পরিমাণ</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="bitoron2" placeholder="চলতি অর্থবছরে বিতরণকৃত অর্থের পরিমাণ">
+                                            <input type="text" class="form-control" name="bitoron2" value="<%= records.bitoron2 %>">
                                         </div>
                                     </div>
 
                                     <div class="form-group">
                                         <label for="aday2" class="col-md-3 control-label">চলতি অর্থবছরে আদায়কৃত টাকার পরিমাণ</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="aday2" placeholder="চলতি অর্থবছরে আদায়কৃত টাকার পরিমাণ">
+                                            <input type="text" class="form-control" name="aday2" value="<%= records.aday2 %>">
                                         </div>
                                     </div>
 
                                     <div class="form-group">
                                         <label for="left2" class="col-md-3 control-label">চলতি অর্থবছরে অবশিষ্ট টাকার পরিমাণ</label>
                                         <div class="col-md-9">
-                                        <input type="text" class="form-control" name="left2" placeholder="চলতি অর্থবছরে অবশিষ্ট টাকার পরিমাণ">
+                                        <input type="text" class="form-control" name="left2" value="<%= records.left2 %>">
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label for="comment" class="col-md-3 control-label">মন্তব্য</label>
                                         <div class="col-md-9">
-                                        <input type="text" class="form-control" name="comment" placeholder="মন্তব্য">
+                                        <input type="text" class="form-control" name="comment" value="<%= records.comment %>">
                                         </div>
                                     </div>
-                                    <div class="form-group">
-                                        <div class="col-md-9">
-                                            <label for="year">বছর :</label>
-                                        <select id="year" name="year" required>
-                                            <% const currentMonth = moment().format("MMM-YYYY").toLowerCase();
-                                            if (moment().format("M") < 7){
-                                                startYear = moment(currentMonth).subtract(1, "year").format('yyyy')
-                                                endYear = moment(currentMonth).format('yyyy')
-                                            }else{
-                                                startYear =moment(currentMonth).format('yyyy')
-                                                endYear = moment(currentMonth).add(1, "year").format('yyyy')
-                                            }
-                                            const sEndYear = endYear.toString().slice(2,4)
-                                            var valueStr = `${startYear}-${sEndYear}`
-                                            
-                                            const finalEnlishToBanglaNumber={'0':'০','1':'১','2':'২','3':'৩','4':'৪','5':'৫','6':'৬','7':'৭','8':'৮','9':'৯'};
-                                            for (const x in finalEnlishToBanglaNumber) {
-                                                valueStr = valueStr.replace(new RegExp(x, 'g'), finalEnlishToBanglaNumber[x]);
-                                            }    
 
-                                            %>
-                                            <option value="<%= startYear.toString() %>"><%= valueStr %></option>
-                                            <option value="2017">২০১৭-১৮</option>
-                                            <option value="2018">২০১৮-১৯</option>
-                                            <option value="2019">২০১৯-২০</option>
-                                            <option value="2020">২০২০-২১</option>
-                                            <option value="2021">২০২১-২২</option>
-                                            <option value="2022">২০২২-২৩</option>
-                                        </select>
+                                    <div class="form-group">
+                                        <!-- <label for="year" class="col-md-3 control-label">বছর</label> -->
+                                        <div class="col-md-9">
+                                            <input type="hidden" class="form-control" name="year" value="<%= records.year %>">
                                         </div>
                                     </div>
 
@@ -129,11 +105,6 @@
                                         <input type="submit" name="submit" value="submit" class="btn btn-primary">   
                                         </div>
                                     </div>
-                                    
-                                    <div class="col-md-offset-3 col-md-9">
-                                    <button> <a href="/center/loan" class="col-md-offset-3 col-md-9">Finish Submitting Report</a>
-                                     </button>
-                                     </div>
                                         
                                     
                                 </form>
