username added again in sidebar

--- a/views/includes/sidebar.ejs
+++ b/views/includes/sidebar.ejs
@@ -2,8 +2,8 @@
   <div class="sidebar-header">
     <a class="header-brand" href="#">
       <!-- <% console.log("sidebar", locals.type) %> -->
-
-      <span class="text"> হর্টিকালচার উইং বিডি </span>
+      <!-- <%= console.log(locals) %> -->
+      <span class="text"> <%= locals.user_name %> </span>
     </a>
 
   </div>
