--- a/views/pd/worker/workerInfo/workerInfoTableAll.ejs
+++ b/views/pd/worker/workerInfo/workerInfoTableAll.ejs
@@ -25,6 +25,7 @@
       <th>মোবাইল নং</th>
       <th>যোগদানের তারিখ</th>
       <th>এনআইডি নং</th>
+      <th>জন্ম তারিখ</th>
       <th>ব্যাংক একাউন্ট নং</th>
     </tr>
   </thead>
@@ -49,6 +50,7 @@
       <td><%= row.mobile %></td>
       <td><%= row.date %></td>
       <td><%= row.nid %></td>
+      <td><%= row.birthDate %></td>
       <td><%= row.bank %></td>
 
     </tr>
@@ -63,6 +65,7 @@
       <td><%= row.mobile %></td>
       <td><%= row.date %></td>
       <td><%= row.nid %></td>
+      <td><%= row.birthDate %></td>
       <td><%= row.bank %></td>
     </tr>
     <%} %>
@@ -84,6 +87,7 @@
       <th>মোবাইল নং</th>
       <th>যোগদানের তারিখ</th>
       <th>এনআইডি নং</th>
+      <th>জন্ম তারিখ</th>
       <th>ব্যাংক একাউন্ট নং</th>
     </tr>
   </thead>
