--- a/views/pd/worker/workerInfo/pdf.ejs
+++ b/views/pd/worker/workerInfo/pdf.ejs
@@ -96,6 +96,7 @@
             <th>মোবাইল নং</th>
             <th>যোগদানের তারিখ</th>
             <th>এনআইডি নং</th>
+            <th>জন্ম তারিখ</th>
             <th>ব্যাংক একাউন্ট নং</th>
           </tr>
         </thead>
@@ -110,6 +111,7 @@
             <td><%= row.mobile %></td>
             <td><%= row.date %></td>
             <td><%= row.nid %></td>
+            <td><%= row.birthDate %></td>
             <td><%= row.bank %></td>
           </tr>
           <% }) %>
@@ -127,6 +129,7 @@
             <th>মোবাইল নং</th>
             <th>যোগদানের তারিখ</th>
             <th>এনআইডি নং</th>
+            <th>জন্ম তারিখ</th>
             <th>ব্যাংক একাউন্ট নং</th>
           </tr>
         </thead>
