--- a/views/pd/worker/workerInfo/pdfAll.ejs
+++ b/views/pd/worker/workerInfo/pdfAll.ejs
@@ -111,6 +111,7 @@
             <th>মোবাইল নং</th>
             <th>যোগদানের তারিখ</th>
             <th>এনআইডি নং</th>
+            <th>জন্ম তারিখ</th>
             <th>ব্যাংক একাউন্ট নং</th>
           </tr>
         </thead>
@@ -130,6 +131,7 @@
             <td><%= row.mobile %></td>
             <td><%= row.date %></td>
             <td><%= row.nid %></td>
+            <td><%= row.birthDate %></td>
             <td><%= row.bank %></td>
           </tr>
           <% indexes+=1%> <%}else{%>
@@ -141,6 +143,7 @@
             <td><%= row.mobile %></td>
             <td><%= row.date %></td>
             <td><%= row.nid %></td>
+            <td><%= row.birthDate %></td>
             <td><%= row.bank %></td>
           </tr>
           <%} %> <%}}) %> <% }) %>
@@ -160,6 +163,7 @@
             <th>মোবাইল নং</th>
             <th>যোগদানের তারিখ</th>
             <th>এনআইডি নং</th>
+            <th>জন্ম তারিখ</th>
             <th>ব্যাংক একাউন্ট নং</th>
           </tr>
         </thead>
