--- a/views/center/employee/chak2/employeeChak2Edit.ejs
+++ b/views/center/employee/chak2/employeeChak2Edit.ejs
@@ -25,9 +25,16 @@
 
                                         
                                     <div class="form-group">
-                                        <label for="podobi" class="col-md-3 control-label">পদের নাম</label>
+                                        <label for="name" class="col-md-3 control-label">পদের নাম</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="name^" value="<%= records.name %>">
+                                            <select name="name" id="name" class="form-control">
+                                                <option value="">পদের নাম</option>
+                                                <% podobiLists.forEach(function(row){ %>
+                                                    <% if (row.podobi != null) {%>
+                                                        <option value="<%= row.podobi %>"><%= row.podobi %></option>
+                                                    <% } %>
+                                                <% }) %>
+                                            </select>
                                         </div>
                                     </div>
                                     
