--- a/views/center/employee/chak1/pdf.ejs
+++ b/views/center/employee/chak1/pdf.ejs
@@ -44,7 +44,7 @@
 
   <div style="margin-top: 5px; padding-top: 5px; padding-bottom: 5px; background-color: #ffffffa6;" class="center">
     <div>
-      <h1>ক্যাডার/নন ক্যাডার কর্মমক্রতার/কর্মচারীদের নাম ও পদবী সহ শূন্য পদের তথ্য</h1>
+      <h1>ক্যাডার/নন ক্যাডার কর্মকর্তার/কর্মচারীদের নাম ও পদবী সহ শূন্য পদের তথ্য</h1>
       <p><b>সেন্টারের নাম :</b><%= centerName.center %></p>
       <%if (records.length >0){ %>
       <table class="table table-bordered table-striped" id="tblexportData" cellspacing="0" cellpadding="0">
